--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/index.ts",
     "db:seed": "tsx src/server/database/seed.ts",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json,css}\""
   },
   "keywords": [],
   "author": "Nathan",
@@ -36,6 +37,7 @@
     "@types/express-serve-static-core": "^4.17.41",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.4",
+    "prettier": "^3.1.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   }
